--- a/style/main.css
+++ b/style/main.css
@@ -696,35 +696,67 @@ h1, h2, h3, h4, h5, h6, a, p {
   position: relative;
 }
 
-.section2-cardContainer::before {
-  content: '';
+.section2-cardContainer--rightabsolute {
   position: absolute;
-  top: 50px;
-  bottom: 0;
-  left: -50px;
-  background-image: url("../image/section1/left.svg");
-  background-repeat: no-repeat;
-  background-position: center;
-  width: 50px;
-  height: 50px;
+  top: 40%;
+  bottom: 0px;
+  right: -80px;
+  min-width: 50px;
+  max-height: 50px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
-.section2-cardContainer::after {
-  content: '';
-  position: absolute;
-  top: 50px;
-  bottom: 0;
-  right: -50px;
-  background-image: url("../image/section1/right.svg");
-  background-repeat: no-repeat;
-  background-position: center;
-  width: 50px;
-  height: 50px;
-  -webkit-transition: all ease 0.5s;
-  transition: all ease 0.5s;
+.section2-cardContainer--rightabsolute__image {
+  -o-object-fit: contain;
+     object-fit: contain;
 }
 
-.section2-cardContainer::after:hover {
+.section2-cardContainer--rightabsolute:hover {
+  background-color: #fff;
+}
+
+.section2-cardContainer--rightabsolute:active {
+  opacity: 0.5;
+  background-color: #fff;
+}
+
+.section2-cardContainer--leftabsolute {
+  position: absolute;
+  top: 40%;
+  bottom: 0px;
+  left: -80px;
+  min-width: 50px;
+  max-height: 50px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.section2-cardContainer--leftabsolute__image {
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+
+.section2-cardContainer--leftabsolute:hover {
+  background-color: #fff;
+}
+
+.section2-cardContainer--leftabsolute:active {
+  opacity: 0.5;
   background-color: #fff;
 }
 
@@ -1189,7 +1221,7 @@ h1, h2, h3, h4, h5, h6, a, p {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   display: block;
-  height: 672px;
+  height: 704px;
   border: none;
 }
 
@@ -1240,6 +1272,7 @@ h1, h2, h3, h4, h5, h6, a, p {
   border: 1px solid orange;
   margin-top: 14px;
   background-color: #fff;
+  padding: 16px 22px;
 }
 
 .section5-section5Form-form-textarea__label {
